VXIPNP/WinNT/HP663X2/hp663x2.h



    ViStatus _VI_FUNC hp663x2_doDelay (ViSession	instrumentHandle,
                                       ViInt16		milliSeconds);


    ViStatus _VI_FUNC hp663x2_stdEvent_Q (ViSession instrumentHandle,
                                          ViPInt16 stdEventStatus);


    ViStatus _VI_FUNC hp663x2_setEnableReg (ViSession instrumentHandle,
                                            ViInt16 enableRegister,
                                            ViInt16 enableMask);


    ViStatus _VI_FUNC hp663x2_getEnableReg (ViSession instrumentHandle,
                                            ViInt16 enableRegister,
                                            ViPInt16 enableMask);


    /***************************************************/
    /*  New constants/functions as of Rev. A.01.00     */
    /***************************************************/

#define HP663X2_QUES_FP				0x0008

    /***************************************************/
    /*  DVM                                            */
    /***************************************************/

#define HP663X2_ARM_DVM_ACQUISITION	6

#define HP663X2_DVM					2

    ViStatus _VI_FUNC hp663x2_fetchDvm (ViSession instrumentHandle,
                                        ViInt16 measurement,
                                        ViPReal64 voltResult);


    ViStatus _VI_FUNC hp663x2_getDvmAcqTrig (ViSession instrumentHandle,
            ViPInt16 acqTrigSource,
            ViPInt16 acqTrigVoltCount,
            ViPInt16 acqTrigVoltSlope,
            ViPReal64 acqTrigVoltLev,
            ViPReal64 acqTrigVoltHyst);


    ViStatus _VI_FUNC hp663x2_measureDvm (ViSession instrumentHandle,
                                          ViInt16 measurement,
                                          ViPReal64 voltResult);


    ViStatus _VI_FUNC hp663x2_setDvmAcqTrig (ViSession instrumentHandle,
            ViInt16 acqTrigSource,
            ViInt16 acqTrigVoltCount,
            ViInt16 acqTrigVoltSlope,
            ViReal64 acqTrigVoltLev,
            ViReal64 acqTrigVoltHyst);


    /***************************************************/
    /*  Second output                                  */
    /***************************************************/

#define HP663X2_QUES_UNREG2			0x0100
#define HP663X2_QUES_OCP2			0x1000

#define HP663X2_OPER_CV2			0x0200
#define HP663X2_OPER_CC2			0x1000

#define	HP663X2_CURR2_IMM			0
#define	HP663X2_CURR2_TRIG			1

#define	HP663X2_CURR2_Q             0
#define	HP663X2_CURR2_Q_MAX         1
#define	HP663X2_CURR2_Q_MIN         2
#define	HP663X2_CURR2_Q_TRIG        3
#define HP663X2_CURR2_Q_TRIG_MAX	4
#define HP663X2_CURR2_Q_TRIG_MIN	5

#define	HP663X2_VOLT2_IMM			0
#define	HP663X2_VOLT2_TRIG			1

#define	HP663X2_VOLT2_Q				0
#define	HP663X2_VOLT2_Q_MAX         1
#define	HP663X2_VOLT2_Q_MIN			2
#define	HP663X2_VOLT2_Q_TRIG        3
#define	HP663X2_VOLT2_Q_TRIG_MAX    4
#define	HP663X2_VOLT2_Q_TRIG_MIN    5

    ViStatus _VI_FUNC hp663x2_getCurr2 (ViSession instrumentHandle,
                                        ViInt16 currQParam,
                                        ViPReal64 currLev);


    ViStatus _VI_FUNC hp663x2_getDisplayChannel (ViSession instrumentHandle,
            ViPInt32 dispChannel);


    ViStatus _VI_FUNC hp663x2_getSenseProt (ViSession instrumentHandle,
                                            ViPBoolean senseProtState);


    ViStatus _VI_FUNC hp663x2_getVolt2 (ViSession instrumentHandle,
                                        ViInt16 voltQParam,
                                        ViPReal64 voltLev);


    ViStatus _VI_FUNC hp663x2_measureCurr2 (ViSession instrumentHandle,
                                            ViInt16 measurement,
                                            ViPReal64 currResult);


    ViStatus _VI_FUNC hp663x2_measureVolt2 (ViSession instrumentHandle,
                                            ViInt16 measurement,
                                            ViPReal64 voltResult);


    ViStatus _VI_FUNC hp663x2_outputVoltCurr2 (ViSession instrumentHandle,
            ViReal64 voltLev,
            ViReal64 currLev);


    ViStatus _VI_FUNC hp663x2_readOutputStatus2 (ViSession instrumentHandle,
            ViPInt16 outputStatus);


    ViStatus _VI_FUNC hp663x2_setCurr2 (ViSession instrumentHandle,
                                        ViInt16 currParam,
                                        ViReal64 currLev);


    ViStatus _VI_FUNC hp663x2_setDisplayChannel (ViSession instrumentHandle,
            ViInt32 dispChannel);


    ViStatus _VI_FUNC hp663x2_setMeasure2 (ViSession instrumentHandle,
                                           ViInt16 outputParam,
                                           ViReal64 outputLev,
                                           ViInt16 settlingTime,
                                           ViPReal64 voltQLev,
                                           ViPReal64 currQLev,
                                           ViPInt16 outputStatus);


    ViStatus _VI_FUNC hp663x2_setSenseProt (ViSession instrumentHandle,
                                            ViBoolean senseProtState);


    ViStatus _VI_FUNC hp663x2_setVolt2 (ViSession instrumentHandle,
                                        ViInt16 voltParam,
                                        ViReal64 voltLev);