VXIPNP/WinNT/HP663X2/hp663x2.bas


Declare Function hp663x2_stdEvent_Q Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           stdEventStatus As Integer) As Long

Declare Function hp663x2_setEnableReg Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal enableRegister As Integer, _
     ByVal enableMask As Integer) As Long

Declare Function hp663x2_getEnableReg Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal enableRegister As Integer, _
           enableMask As Integer) As Long

Declare Function hp663x2_doDelay Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal milliSeconds As Long) As Long
     
'        ***************************************************
'        *  New constants/functions as of Rev. A.01.00     *
'        ***************************************************

Global Const HP663X2_QUES_FP = &H0008

'        ***************************************************
'        *  DVM                                            *
'        ***************************************************

Global Const HP663X2_ARM_DVM_ACQUISITION = 6

Global Const HP663X2_DVM = 2

Global Const HP663X2_DVM_MIN = 0

Declare Function hp663x2_fetchDvm Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal measurement As Integer, _
	       voltResult As Double) As Long

Declare Function hp663x2_getDvmAcqTrig Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	       acqTrigSource As Integer, _
	       acqTrigVoltCount As Integer, _
	       acqTrigVoltSlope As Integer, _
	       acqTrigVoltLev As Double, _
	       acqTrigVoltHyst As Double) As Long

Declare Function hp663x2_measureDvm Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal measurement As Integer, _
	       voltResult As Double) As Long

Declare Function hp663x2_setDvmAcqTrig Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal acqTrigSource As Integer, _
	 ByVal acqTrigVoltCount As Integer, _
	 ByVal acqTrigVoltSlope As Integer, _
	 ByVal acqTrigVoltLev As Double, _
	 ByVal acqTrigVoltHyst As Double) As Long

'        ***************************************************/
'        *  Second output                                  */
'        ***************************************************/

Global Const HP663X2_QUES_UNREG2 = &H0100
Global Const HP663X2_QUES_OCP2 = &H1000

Global Const HP663X2_OPER_CV2 = &H0200
Global Const HP663X2_OPER_CC2 = &H1000

Global Const HP663X2_CURR2_IMM = 0
Global Const HP663X2_CURR2_TRIG = 1

Global Const HP663X2_CURR2_Q = 0
Global Const HP663X2_CURR2_Q_MAX = 1
Global Const HP663X2_CURR2_Q_MIN = 2
Global Const HP663X2_CURR2_Q_TRIG = 3
Global Const HP663X2_CURR2_Q_TRIG_MAX = 4
Global Const HP663X2_CURR2_Q_TRIG_MIN = 5

Global Const HP663X2_VOLT2_IMM = 0
Global Const HP663X2_VOLT2_TRIG = 1

Global Const HP663X2_VOLT2_Q = 0
Global Const HP663X2_VOLT2_Q_MAX = 1
Global Const HP663X2_VOLT2_Q_MIN = 2
Global Const HP663X2_VOLT2_Q_TRIG = 3
Global Const HP663X2_VOLT2_Q_TRIG_MAX = 4
Global Const HP663X2_VOLT2_Q_TRIG_MIN = 5

Declare Function hp663x2_getCurr2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal currQParam As Integer, _
	       currLev As Double) As Long

Declare Function hp663x2_getDisplayChannel Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	       dispChannel As Long) As Long

Declare Function hp663x2_getSenseProt Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	       senseProtState As Integer) As Long

Declare Function hp663x2_getVolt2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal voltQParam As Integer, _
	       voltLev As Double) As Long

Declare Function hp663x2_measureCurr2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal measurement As Integer, _
	       currResult As Double) As Long

Declare Function hp663x2_measureVolt2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal measurement As Integer, _
	       voltResult As Double) As Long

Declare Function hp663x2_outputVoltCurr2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal voltLev As Double, _
	 ByVal currLev As Double) As Long

Declare Function hp663x2_readOutputStatus2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	       outputStatus As Integer) As Long

Declare Function hp663x2_setCurr2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal currParam As Integer, _
	 ByVal currLev As Double) As Long

Declare Function hp663x2_setDisplayChannel Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal dispChannel As Long) As Long

Declare Function hp663x2_setMeasure2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal outputParam As Integer, _
	 ByVal outputLev As Double, _
	 ByVal settlingTime As Integer, _
	       voltQLev As Double, _
	       currQLev As Double, _
	       outputStatus As Integer) As Long

Declare Function hp663x2_setSenseProt Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal senseProtState As Integer) As Long

Declare Function hp663x2_setVolt2 Lib "hp663x2_32.dll" _
	(ByVal instrumentHandle As Long, _
	 ByVal voltParam As Integer, _
	 ByVal voltLev As Double) As Long


'* End of instrument specific declarations *
'*---------------------------------------------------------------------------*

